[gd_scene load_steps=4 format=3 uid="uid://bincjiyglgcf4"]

[ext_resource type="Script" path="res://scripts/make-boba.gd" id="1_lo0ut"]
[ext_resource type="Texture2D" uid="uid://d12y1p1qn73ff" path="res://assets/stations.webp" id="2_t2nm0"]
[ext_resource type="Texture2D" uid="uid://ooy1y8vts1b5" path="res://assets/download-removebg-preview.png" id="3_iqsvq"]

[node name="make-boba" type="Node2D"]
script = ExtResource("1_lo0ut")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -576.0
offset_top = -321.0
offset_right = 560.0
offset_bottom = 324.0
texture = ExtResource("2_t2nm0")

[node name="Back" type="Button" parent="."]
offset_left = -541.0
offset_top = 232.0
offset_right = -433.0
offset_bottom = 272.0
text = "Back"

[node name="Next" type="Button" parent="."]
offset_left = 362.0
offset_top = 238.0
offset_right = 457.0
offset_bottom = 283.0
text = "Next"

[node name="cupsize" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="large-cup" type="TextureButton" parent="cupsize"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = -548.0
offset_top = -244.0
offset_right = -344.0
offset_bottom = -52.0
scale = Vector2(1.25, 1.25)
texture_normal = ExtResource("3_iqsvq")

[node name="med-cup" type="TextureButton" parent="cupsize"]
layout_mode = 0
offset_left = -525.0
offset_top = -79.0
offset_right = -321.0
offset_bottom = 113.0
texture_normal = ExtResource("3_iqsvq")

[node name="small-cup" type="TextureButton" parent="cupsize"]
layout_mode = 0
offset_left = -493.0
offset_top = 47.0
offset_right = -289.0
offset_bottom = 239.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("3_iqsvq")

[node name="cup" type="TextureRect" parent="cupsize"]
layout_mode = 0
offset_left = -286.0
offset_top = -172.0
offset_right = -176.0
offset_bottom = -4.0
stretch_mode = 2

[node name="drink" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="tea" type="Button" parent="drink"]
layout_mode = 0
offset_left = -258.0
offset_top = -75.0
offset_right = -174.0
offset_bottom = -53.0

[node name="coffee" type="Button" parent="drink"]
layout_mode = 0
offset_left = -87.0
offset_top = -76.0
offset_right = -2.0
offset_bottom = -58.0

[connection signal="pressed" from="Back" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="cupsize/large-cup" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="cupsize/large-cup" to="." method="_on_largecup_pressed"]
[connection signal="pressed" from="cupsize/med-cup" to="." method="_on_medcup_pressed"]
[connection signal="pressed" from="cupsize/small-cup" to="." method="_on_smallcup_pressed"]
[connection signal="pressed" from="drink/tea" to="." method="_on_tea_pressed"]
[connection signal="pressed" from="drink/coffee" to="." method="_on_coffee_pressed"]
